tests/ui/consts/const-size_of_val-align_of_val-extern-type.stderr
error[E0080]: `extern type` does not have known layout
  --> $DIR/const-size_of_val-align_of_val-extern-type.rs:10:31
   |
LL | const _SIZE: usize = unsafe { size_of_val(&4 as *const i32 as *const Opaque) };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_SIZE` failed here

error[E0080]: `extern type` does not have known layout
  --> $DIR/const-size_of_val-align_of_val-extern-type.rs:12:32
   |
LL | const _ALIGN: usize = unsafe { align_of_val(&4 as *const i32 as *const Opaque) };
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_ALIGN` failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
